Fill in moussaka recipe details and create img folder

--- a/recipes/moussaka.html
+++ b/recipes/moussaka.html
@@ -7,7 +7,23 @@
     </head>
 
     <body>
-        <h1>Moussaka</h1>
+        <h2>Moussaka</h2>
+        <img src="../img/moussaka.jpeg" alt="A dish of mousssaka topped with slices of avocado, covered in cheese" width="750">
+        <h3>Description</h3>
+        <p>This is a dish I like eating sometimes, my Grandma used to make it. I tried to make it once and it wasn't very good, so I think I ought to try again.</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Avocado</li>
+            <li>Cheese (lots of it)</li>
+            <li>Lamb mince</li>
+        </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Take a large dish.</li>
+            <li>Bake a moussaka in it.</li>
+        </ol>
+        <p>This recipe is overly complicated, so go <a href="https://www.bbc.co.uk/food/recipes/moussaka_01004">here</a> for the full thing.</p>
+        <p><a href="../index.html">Return to homepage</a></p>
     </body>
 
 </html>
