Add basic styling through creation of style.css

--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./style.css">
         <title>Odin Recipes - Home</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <div class="homepage"><h1>Odin Recipes</h1>
         <p><a href="./recipes/hongshaorou.html">Hongshaorou</a></p>
         <p><a href="./recipes/banana.html">Banana</a></p>
-        <p><a href="./recipes/moussaka.html">Moussaka</a></p>
+        <p><a href="./recipes/moussaka.html">Moussaka</a></p></div>
     </body>
 
 </html>
