--- a/recipes/banana.html
+++ b/recipes/banana.html
@@ -3,12 +3,13 @@
 
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
         <title>Odin Recipes - Banana</title>
     </head>
 
     <body>
-        <h2>Banana</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Banana-Single.jpg" alt="A single yellow banana" width="500">
+        <div class="centre"><h2>Banana</h2>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Banana-Single.jpg" alt="A single yellow banana" width="500"></div>
         <h3>Description</h3>
         <p>A useful and tasty snack that has a naturally-occurring carry case, making it handy for the ape and working man alike.</p>
         <h3>Ingredients</h3>
