--- a/recipes/moussaka.html
+++ b/recipes/moussaka.html
@@ -3,12 +3,13 @@
 
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
         <title>Odin Recipes - Moussaka</title>
     </head>
 
     <body>
-        <h2>Moussaka</h2>
-        <img src="../img/moussaka.jpeg" alt="A dish of mousssaka topped with slices of avocado, covered in cheese" width="750">
+        <div class="centre"><h2>Moussaka</h2>
+        <img src="../img/moussaka.jpeg" alt="A dish of mousssaka topped with slices of avocado, covered in cheese" width="750"></div>
         <h3>Description</h3>
         <p>This is a dish I like eating sometimes, my Grandma used to make it. I tried to make it once and it wasn't very good, so I think I ought to try again.</p>
         <h3>Ingredients</h3>
