Improve styling of homepage and clean up formatting of recipe pages
I improved the styling of the homepage, and indented the contents of the
div tags in the recipe pages to improve readability.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     </head>
 
     <body>
-        <div class="homepage"><h1>Odin Recipes</h1>
-        <p><a href="./recipes/hongshaorou.html">Hongshaorou</a></p>
-        <p><a href="./recipes/banana.html">Banana</a></p>
-        <p><a href="./recipes/moussaka.html">Moussaka</a></p></div>
+        <div class="homepage">
+            <h1>Odin Recipes</h1>
+            <p><a href="./recipes/hongshaorou.html">Hongshaorou</a></p>
+            <p><a href="./recipes/banana.html">Banana</a></p>
+            <p><a href="./recipes/moussaka.html">Moussaka</a></p>
+        </div>
     </body>
 
 </html>
