Amend styling of homepage and titles of recipe pages
I felt like the previous design was not an appropriate demonstration of my current CSS studies.
In order to reflect this better I have begun the process of updating the whole website design to
something more modern. I have completed this task for the headings of each page in the website, and
will continue to do this for the contents of each page too.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <body>
         <div class="homepage">
-            <h1>Odin Recipes</h1>
-            <p><a href="./recipes/hongshaorou.html">Hongshaorou</a></p>
-            <p><a href="./recipes/banana.html">Banana</a></p>
-            <p><a href="./recipes/moussaka.html">Moussaka</a></p>
+            <h1>Odin Recipes.</h1>
+            <p><a href="./recipes/hongshaorou.html">Hongshaorou.</a></p>
+            <p><a href="./recipes/banana.html">Banana.</a></p>
+            <p><a href="./recipes/moussaka.html">Moussaka.</a></p>
         </div>
     </body>
 
