Update stylings for headings in recipe pages
By applying the recipe-content class to the body directly, I had created disunity
in the website design, as it meant that the default top margin was changed to 0
on the sub-pages but not for the homepage. I created divs in order to counter
this. I also added full stops to titles on recipe pages for the sake of
consistency.

--- a/recipes/banana.html
+++ b/recipes/banana.html
@@ -7,22 +7,24 @@
         <title>Odin Recipes - Banana</title>
     </head>
 
-    <body class="recipe-content">
-        <h2>Banana</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Banana-Single.jpg" alt="A single yellow banana" width="500">
-        <h3>Description</h3>
-        <p>A useful and tasty snack that has a naturally-occurring carry case, making it handy for the ape and working man alike.</p>
-        <h3>Ingredients</h3>
-        <ul>
-            <li>A single banana</li>
-        </ul>
-        <h3>Steps</h3>
-        <ol>
-            <li>Take the single banana in your hand.</li>
-            <li>Peel the banana. There are various ways to do this, which go beyond the scope of this recipe.</li>
-            <li>Eat the banana.</li>
-        </ol>
-        <p><a href="../index.html">Return to homepage</a></p>
+    <body>
+        <div class="recipe-content">
+            <h2>Banana.</h2>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/8/8a/Banana-Single.jpg" alt="A single yellow banana" width="500">
+            <h3>Description</h3>
+            <p>A useful and tasty snack that has a naturally-occurring carry case, making it handy for the ape and working man alike.</p>
+            <h3>Ingredients</h3>
+            <ul>
+                <li>A single banana</li>
+            </ul>
+            <h3>Steps</h3>
+            <ol>
+                <li>Take the single banana in your hand.</li>
+                <li>Peel the banana. There are various ways to do this, which go beyond the scope of this recipe.</li>
+                <li>Eat the banana.</li>
+            </ol>
+            <p><a href="../index.html">Return to homepage</a></p>
+        </div>
     </body>
 
 </html>
